# gempba

./: .clang-format  .clang-tidy  .gitignore  CITATION.bib  CITATION.cff  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-LICENSES  a.out  batch.sh  codecov.yml  config.h.in  gdb_commands  hostfile  linux_build.sh  pubkey.gpg  run.ps1  run.sh  run_benchmark.ps1  run_benchmark.sh  run_folder.ps1  run_folder.sh  slurm_benchmark.sh  win_build.sh
.github/: FUNDING.yml
bindings/jni/: CMakeLists.txt
bindings/jni/src/: gempba_jni.cpp
cmake/: CPackConfig.cmake  gempba.pc.in  gempbaConfig.cmake.in
data/: 600_cell  60_cell  DSJC500_5  brock200_1  influenza_30  p_hat1000_2  p_hat700_1  phat1000.sh
docs/: remote-connection.md
examples/: CMakeLists.txt  MP_bitvec_void_semi.cpp  MP_bitvec_void_semi_enc.cpp  MP_bitvec_void_semi_lenc.cpp  MT_graph_void_semi.cpp  main.cpp  mp_benchmark.cpp  mp_bitvect_basic_enc_central.cpp  mp_bitvect_basic_enc_semi.cpp  mp_bitvect_opt_enc_central.cpp  mp_bitvect_opt_enc_semi.cpp  mt_benchmark.cpp  mt_bitvect_opt_enc_semi.cpp  mt_graph_opt_enc_semi.cpp  mt_graph_opt_enc_semi_non_void.cpp
examples/include/: Graph.hpp  MP_bitvec_void_semi.hpp  MP_bitvec_void_semi_enc.hpp  MP_bitvec_void_semi_lenc.hpp  MT_graph_void_semi.hpp  VC_void_MPI_bitvec.hpp  VC_void_bitvec.hpp  VC_void_bitvec_enc2.hpp  VertexCover.hpp  basic_encoding_utils.hpp  benchmark_io.hpp  benchmark_utils.hpp  main.hpp  mp_benchmark.hpp  mp_bitvec_opt_enc.hpp  mp_bitvect_basic_enc.hpp  mp_bitvector_basic_encoding.hpp  mp_bitvector_optimized_encoding.hpp  mt_benchmark.hpp  mt_bitvect_opt_enc.hpp  mt_bitvector_optimized_encoding.hpp  mt_graph_opt_enc_semi.hpp  mt_graph_opt_enc_semi_non_void.hpp  optimized_encoding_utils.hpp  util.hpp
examples/multiprocessing/: CMakeLists.txt
examples/multiprocessing/include/: benchmark.hpp  bitvector_basic_encoding.hpp  bitvector_optimized_encoding.hpp  mp_bitvector_optimized_encoding.hpp
examples/multiprocessing/src/: benchmark.cpp  bitvect_basic_enc_central.cpp  bitvect_basic_enc_semi.cpp  bitvect_opt_enc_central.cpp  bitvect_opt_enc_semi.cpp  mp_benchmark.cpp  mp_bitvect_basic_enc_central.cpp  mp_bitvect_basic_enc_semi.cpp  mp_bitvect_opt_enc_central.cpp  mp_bitvect_opt_enc_semi.cpp
examples/multithreading/: CMakeLists.txt
examples/multithreading/include/: benchmark.hpp  bitvector_optimized_encoding.hpp  graph_opt_enc_semi.hpp  graph_opt_enc_semi_non_void.hpp  mt_benchmark.hpp  mt_graph_opt_enc_semi.hpp
examples/multithreading/src/: benchmark.cpp  bitvect_opt_enc_semi.cpp  graph_opt_enc_semi.cpp  graph_opt_enc_semi_non_void.cpp  mt_benchmark.cpp  mt_bitvect_opt_enc_semi.cpp  mt_graph_opt_enc_semi.cpp  mt_graph_opt_enc_semi_non_void.cpp
include/: BranchHandler.hpp  DLB_Handler.hpp  Graph.hpp  TestOnly.hpp  ThreadPool.hpp  VC_non_void.hpp  VC_non_void_MPI.hpp  VC_void.hpp  VC_void_MPI.hpp  VC_void_MPI_bitvec.hpp  VC_void_bitvec.hpp  VC_void_bitvec_enc.hpp  VC_void_bitvec_enc2.hpp  VertexCover.hpp  args_handler.hpp  main.h  util.hpp
input/: C1000_9  brock400_4  c_fat500_1  colon_cells  p_hat500_3  yeast
results/: 00100_1.txt
scripts/: _msys2_find_mvn.sh  build_all_jars_linux.sh  build_all_jars_macos.sh  build_all_jars_windows.sh  build_jar_linux.sh  build_jar_macos.sh  build_jar_windows.sh  build_linux.sh  build_windows.sh  connect_telemetry.ps1  lint.sh  linux_build.sh  run.ps1  run.sh  run_benchmark.ps1  run_benchmark.sh  run_folder.ps1  run_folder.sh  slurm_benchmark.sh  telemetry_tunnel.ps1  telemetry_tunnel.sh  telemetry_view.ps1  (+4 more)
test/: CMakeLists.txt
tests/: CMakeLists.txt
tests/GemPBA/branch_management/: node_manager_test.cpp
tests/GemPBA/function_trace/impl/: trace_node_impl_test.cpp
tests/GemPBA/load_balancing/impl/: quasi_horizontal_load_balancer_test.hpp.cpp
tests/GemPBA/schedulers/factory/: scheduler_factory_test.cpp
tests/GemPBA/schedulers/impl/: mpi_semi_centralized_scheduler_test.cpp
tests/GemPBA/utils/: executor_test.cpp  queue_test.cpp  tree_test.cpp  utils_test.cpp
tests/function_trace/impl/: trace_node_impl_test.cpp
tests/load_balancing/impl/: quasi_horizontal_load_balancer_test.cpp  work_stealing_load_balancer_test.cpp
tests/node_trace/api/: node_test.cpp
tests/node_trace/impl/: node_core_impl_test.cpp
tests/runnables/impl/: serial_runnable_non_void_test.cpp  serial_runnable_void_test.cpp
tests/schedulers/defaults/: default_mpi_stats_visitor_test.cpp
tests/schedulers/factory/: scheduler_factory_test.cpp
tests/schedulers/impl/: mpi_semi_centralized_scheduler_test.cpp
tests/schedulers/impl/mpi/: default_mpi_stats_test.cpp  default_mpi_stats_visitor_test.cpp
tests/support/: cabi_test_fixture.hpp  test_utils.hpp
tests/unit/: gempba_test.cpp  node_manager_test.cpp
tests/unit/cabi/: buffer_test.cpp  internals_test.cpp  load_balancer_test.cpp  node_manager_test.cpp  node_test.cpp  runtime_test.cpp  scheduler_test.cpp  serial_runnable_test.cpp  telemetry_test.cpp
tests/unit/core/: node_test.cpp
tests/unit/defaults/: default_mpi_stats_visitor_test.cpp
tests/unit/impl/load_balancing/: quasi_horizontal_load_balancer_test.cpp  work_stealing_load_balancer_test.cpp
tests/unit/impl/node_trace/: node_core_impl_test.cpp
tests/unit/impl/runnables/: serial_runnable_non_void_test.cpp  serial_runnable_void_test.cpp
tests/unit/impl/schedulers/: centralized_utils_tests.cpp
tests/unit/impl/schedulers/mpi/: default_mpi_stats_test.cpp
tests/unit/telemetry/: center_tcp_server_test.cpp  cgroup_memory_test.cpp  hwloc_probe_test.cpp  json_serializer_test.cpp  local_transport_test.cpp  node_probe_test.cpp  process_probe_test.cpp  telemetry_hub_test.cpp  topology_builder_test.cpp
tests/unit/utils/: queue_test.cpp  result_test.cpp  score_test.cpp  task_bundle_test.cpp  task_packet_test.cpp  transmission_guard_test.cpp  tree_test.cpp  utils_test.cpp
tests/utils/: executor_test.cpp  queue_test.cpp  transmission_guard_test.cpp  tree_test.cpp  utils_test.cpp
tests/utils/ipc/: result_test.cpp  score_test.cpp  task_bundle_test.cpp  task_packet_test.cpp
tests/utils/resources/: tree0  tree1  tree2
(+1302 files in other folders)
